--- a/app/src/main/res/layout/txt_layout.xml
+++ b/app/src/main/res/layout/txt_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -7,10 +7,11 @@
     android:actionBarSize="100dp">
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:textColor="#FFFFFF"
         android:textSize="20dp"
@@ -20,8 +21,8 @@
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/title"
         android:layout_gravity="center"
-        android:queryHint="Enter Destination or Location ID"
-        />
+        android:queryHint="Enter Destination or Location ID" />
 
-</LinearLayout>
+</RelativeLayout>
