--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:fitsSystemWindows="true">
 
-    <ImageView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/p"
-        android:scaleType="centerCrop" />
-    <Button
-        android:id="@+id/searchHere"
+        android:orientation="vertical">
+
+        <include
+            layout="@layout/toolbar_layout"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/p"
+            android:scaleType="centerCrop"/>
+        <Button
+            android:id="@+id/searchHere"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search Here"
+            android:background="#808080"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:text="@string/search_button"
-        android:textSize="12sp"
-        android:textColor="#000000" />
+        android:layout_height="match_parent"
+        android:id="@+id/navigationView"
+        android:layout_gravity="start"
+        android:background="#FFFFFF"
+        app:menu="@menu/drawer_menu"
+        app:headerLayout="@layout/header_layout" >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:clickable="true"
+            android:orientation="horizontal"
+            android:layout_marginBottom="15dp">
 
+            <TextView
+                android:id="@+id/nav_footer_sign_in"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right|center_horizontal"
+                android:text="@string/sign_in"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:onClick="sign_in"/>
+            <TextView
+                android:id="@+id/nav_split"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="|"
+                android:textSize="15dp" />
+            <TextView
+                android:id="@+id/nav_footer_sign_up"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/sign_up"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:onClick="sign_up"/>
 
+        </LinearLayout>
 
-</RelativeLayout>
+    </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
