--- a/app/src/main/res/layout/reserve.xml
+++ b/app/src/main/res/layout/reserve.xml
@@ -35,7 +35,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@drawable/reserve_border"
-            android:elevation="2dp">
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp">
             <TextView
                 android:id="@+id/destination"
                 android:layout_width="0dp"
@@ -65,10 +66,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal|center_vertical"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="20dp"
                 android:text="@string/dateSelect"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:backgroundTint="#FFA500"
                 android:editable="false"
                 android:focusableInTouchMode="false"/>
@@ -78,10 +79,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal|center_vertical"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginLeft="20dp"
                 android:text="@string/dateLeaving"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:textColor="#000000"
                 android:backgroundTint="#FFA500"
                 android:editable="false"
@@ -99,26 +100,31 @@
                 android:id="@+id/strtArriv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:gravity="center_horizontal|center_vertical"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="20dp"
                 android:text="@string/strtTime"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:textColor="#000000"
                 android:backgroundTint="#FFA500"
                 android:editable="false"
                 android:focusableInTouchMode="false"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_arrow_forward" />
             <EditText
                 android:id="@+id/endLeav"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:gravity="center_horizontal|center_vertical"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginLeft="20dp"
                 android:text="@string/endTime"
-                android:textSize="18dp"
+                android:textSize="15dp"
                 android:textColor="#000000"
                 android:backgroundTint="#FFA500"
                 android:editable="false"
@@ -133,8 +139,7 @@
             android:layout_below="@id/layout2"
             android:orientation="horizontal"
             android:background="#F5F5F5"
-            android:layout_marginTop="42dp"
-            android:elevation="5dp">
+            android:layout_marginTop="42dp">
             <TextView
                 android:id="@+id/duration"
                 android:layout_width="match_parent"
@@ -160,7 +165,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/layout_duration"
             android:orientation="horizontal"
-            android:background="#FFFFFF"
             android:elevation="5dp">
             <TextView
                 android:id="@+id/price"
@@ -192,48 +196,54 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:background="@drawable/reserve_border_white"
+        android:background="@drawable/reserve_border_blue"
         android:elevation="5dp">
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/layout5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="@drawable/reserve_border"
-            android:elevation="2dp">
+            android:background="@drawable/reserve_border_vehreg"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp">
             <TextView
                 android:id="@+id/vehicleDetails"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/vehicle"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:textSize="15dp"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:textStyle="bold"/>
 
-        </LinearLayout>
-        <LinearLayout
+        </RelativeLayout>
+        <RelativeLayout
             android:id="@+id/layout6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/layout5"
-            android:orientation="horizontal"
-            android:layout_marginLeft="5dp"
+            android:paddingBottom="10dp"
             android:layout_marginRight="5dp"
-            android:backgroundTint="#FFFFFF"
-            android:elevation="2dp">
+            android:layout_marginLeft="5dp">
             <EditText
-                android:layout_width="0dp"
+                android:id="@+id/vehReg"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="#FFFFFF"
-                android:textSize="15dp"
-                android:layout_marginLeft="5dp"/>
-        </LinearLayout>
+                android:paddingLeft="10dp"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
+                android:background="#FFFFFF"
+                android:textSize="15sp"
+                android:hint="Number Plate"
+                />
+
+        </RelativeLayout>
     </RelativeLayout>
 
     <RelativeLayout
@@ -251,7 +261,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@drawable/reserve_border"
-            android:elevation="2dp">
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp">
             <TextView
                 android:id="@+id/paymentDetails"
                 android:layout_width="0dp"
@@ -273,7 +284,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/layout7"
             android:orientation="horizontal"
-            android:background="#FFFFFF"
+            android:background="@drawable/reserve_border_white"
             android:elevation="2dp">
             <TextView
                 android:id="@+id/blank"
