--- a/app/src/main/res/drawable/reserve_border.xml
+++ b/app/src/main/res/drawable/reserve_border.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item >
+        <shape>
+            <solid android:color="#d3d3d3"/>
+        </shape>
+    </item>
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#D3D3D3"/>
-    <stroke android:width="2dp" android:color="#FFFFFF" />
-    <corners
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp" />
-    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
-</shape>
+    <item android:bottom="1dp">
+        <shape>
+            <solid android:color="#ffffff"/>
+        </shape>
+    </item>
+</layer-list>
